2006-11-16  Stan Cox  <scox@redhat.com>

	* hpd/CLI.java (PrintHandler.handle): Add -task.
	Rename frysk.lang to frysk.value.
	* hpd/ExprSymTab.java: Rename frysk.lang to frysk.value.
	* hpd/SymTab.java: Rename frysk.lang to frysk.value.

2006-11-14  Andrew Cagney  <cagney@redhat.com>

	* hpd/TestSetCreation.java: Use frysk.junit.TestCase.
	* hpd/TestSetParser.java: Use frysk.junit.TestCase.

2006-11-09  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (get): Add isClassType support.

2006-11-03  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (VariableAccessor.getAddr): New.
	(get): Use BaseTypes. Add isArrayType support.
	* hpd/CLI.java (PrintHandler.handle): Use BaseTypes.

2006-10-11  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (VariableAccessor): New.
	(AccessDW_FORM_block): New.
	(AccessDW_FORM_data): New.
	(put): Use VariableAccessor.
	(get): Use VariableAccessor.

2006-10-06  Mike Cvet  <mcvet@redhat.com>

	* hpd/ExprSymTab.java (ExprSymTab): New StackFrame parameter.Sets
	currentFrame to the inner most frame of the incoming stack trace 
	if non-null; generates new stack trace otherwise. Got rid of 
	innermostFrame field. Fixes #3312.
	(getBufferAddr): Checks currentFrame.getInner() null-ness instead
	of innermostFrame.
	(getDie): Ditto.
	(getInnerMostFrame): Iterates a pointer to currentFrame's innermost
	and returns it.
	* hpd/SymTab.java (SymTab): Added a new constructor with 
	an extra parameter - a StackFrame. Calls ExprSymTab with new
	StackFrame argument; null if no StackFrame was given.
	* hpd/CLI.java (AttachHandler.handle): Sends in an extra null
	argument to the new SymTab.

2006-10-03  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (getBufferAddr): Add x86regnumbers to map x86
	dwarf reg numbers to unwind reg numbers.

2006-10-02  Stan Cox  <scox@redhat.com>

	* hpd/ExprSymTab.java (getBufferAddr):  Add x86regnames to map x86
	dwarf reg numbers to unwind reg names.

2006-10-02  Stan Cox  <scox@redhat.com>
